--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,6 +3,8 @@
 html{
 	font-family: 'Josefin Sans', sans-serif;
 }
+
+/*top header bar*/
 header{
 	text-align: center;
 	padding-top: 20px;
@@ -15,4 +17,23 @@ header h1{
 }
 header h2{
 	font-size: 1.1em;
+}
+
+section{
+	width: 93%;
+	margin: auto;
+	border: 1px solid #f2f2f2;
+	border-radius: 3px;
+	margin-top: 35px;
+	margin-bottom: 35px;
+	box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.07);
+}
+section h3{
+	text-align: center;
+	font-size: 1.3em;
+	padding-top: 5px;
+	padding-bottom: 5px;
+	background-color: #f2f2f2;
+	margin-bottom: 10px;
+	border-bottom: 2px solid #99ddff;
 }
