--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -11,6 +11,7 @@ header{
 	padding-bottom: 20px;
 	background-color: #f2f2f2;
 	border-bottom: 2px solid #ff5050;
+	margin-bottom: 50px;
 }
 header h1{
 	font-size: 2em;
@@ -23,10 +24,10 @@ section{
 	width: 93%;
 	margin: auto;
 	border: 1px solid #f2f2f2;
-	border-radius: 3px;
-	margin-top: 35px;
-	margin-bottom: 35px;
-	box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.07);
+	border-radius: 5px;
+	margin-top: 50px;
+	margin-bottom: 50px;
+	box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.08);
 }
 section h3{
 	text-align: center;
@@ -34,6 +35,55 @@ section h3{
 	padding-top: 5px;
 	padding-bottom: 5px;
 	background-color: #f2f2f2;
-	margin-bottom: 10px;
+	margin-bottom: 25px;
 	border-bottom: 2px solid #99ddff;
+}
+
+form{
+	padding-left: 10px;
+	padding-right: 15px;
+	margin-bottom: 20px;
+}
+label{
+	text-align: left;
+}
+label p{
+	margin-bottom: -10px;
+	padding-left: 15px;
+}
+input{
+	position: relative;
+	outline: none;
+	width: 100%;
+	height: 30px;
+	margin-bottom: 20px;
+	font-size: .9em;
+	text-align: center;
+	border:	1px solid #bfbfbf;
+	transition: all .7s; 
+}
+input:hover{
+	border-color: #99ddff;
+}
+input:focus{
+	border-color: #ff5050;
+}
+
+.submit{
+	margin-bottom: 5px;
+}
+
+.btn{
+	font-family: 'Josefin Sans', sans-serif;
+	font-size: 1.05em;
+	color: #fff;
+	background: linear-gradient(to bottom, #ff5050 0%, #d44646 100%);
+	border: none;
+	border-radius: 5px;
+}
+.btn:hover{
+	background: linear-gradient(to bottom, #ff6161 0%, #d65151 100%);
+}
+.btn:active{
+	background: linear-gradient(to bottom, #e63333 0%, #ae3d3d 100%);
 }
